--- a/assets/less/layout.less
+++ b/assets/less/layout.less
@@ -326,6 +326,7 @@
 
 .list{
 	.menu_mix();
+	position:relative;
 	.list-title{
 	
 	}
@@ -369,6 +370,7 @@
 
 .two-column,.three-column{
 	.section();
+	position:relative;
 	border-top:@border_width @secondary_color solid;
 	display:block;
 	background-color:#FFF;
